syntax = "proto3";

option go_package = "./rpc";

package rpc;

service TxSrv { rpc ReqTx(TxReq) returns (stream Tx); }

message TxReq { repeated bytes hash = 1; }

message Tx {
  bytes Id = 1;
  repeated TxInput Vin = 2;
  repeated TxOutput Vout = 3;
}

message TxInput {
  bytes Txid = 1;
  int64 Vout = 2;
  bytes Sig = 3;
  bytes PubKey = 4;
}

message TxOutput {
  int64 Value = 1;
  bytes PubKeyHash = 2;
}